--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/scrapping?useSSL=false&useTimezone=true&serverTimezone=GMT&useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
 spring.datasource.username=root
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.datasource.hikari.data-source-properties.useUnicode=true
 spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
 spring.jpa.hibernate.ddl-auto=update
@@ -11,13 +11,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=arahov1986@gmail.com
-#spring.mail.password=mesropik2010
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#caritas.base.url=http://localhost:8080
 logging.level.root=INFO
 logging.level.am.itspace=INFO
 logging.file=logs/application.log
